[package]
name = "oidn-wgpu-interop"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "An inteoperability layer between wgpu and oidn"
keywords = ["interoperability", "compatability", "oidn", "wgpu"]
repository = "https://github.com/Vecvec/oidn-wgpu-interop"
exclude = [".cargo/*"]

[dependencies]
oidn = "2.3.2"
wgpu = "24.0.1"
windows = "0.58.0"
ash = "0.38.0"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }